--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 </div>
                 <div class="col-md-8">
                     <p>
-                        With three years commercial experience with Python and PyQt, I develop desktop applications for data visualisation, statistical analysis and parameter derivation used in offshore geotechnical engineering reports. In my free time I develop DSP audio plugins using C++, JUCE and CMake which merge my two biggest passions: programming and music.
+                        With four years commercial experience with Python, PySide and Qt, I develop desktop applications for data visualisation, statistical analysis and parameter derivation used in offshore geotechnical engineering reports. In my free time I develop DSP audio plugins using C++, JUCE and CMake which merge my two biggest passions: programming and music.
                         <br><br>
                         Travelling through most of my twenties, my unconventional path has given me a unique perspective for problem solving. I love making desktop GUIs, using the challenge as an outlet for continuous learning and creativity.
                     </p>
@@ -94,11 +94,11 @@
                     <ul>
                     <li style="font-size:12px">Develop, maintain and test portable desktop applications built with Python / PyQt / PySide / QtDesigner, compiled for portable use with PyInstaller, as well as in-house tools using VBA, SQL and Excel</li>
                     <li style="font-size:12px">Data set manipulation, statistical analysis and parameter derivation using Pandas and numpy</li>
-                    <li style="font-size:12px">Signal processing using filters with scipy, scikit-learn and numpy</li>
+                    <li style="font-size:12px">Signal processing using FTT and filters with scipy, scikit-learn and numpy</li>
                     <li style="font-size:12px">Data visualisation with pyqtgraph, matplotlib, QtCharts, plotly, PowerBI, JavaScript</li>
                     <li style="font-size:12px">Version control using Git/GitHub desktop and documentation</li>
                     <li style="font-size:12px">Data management and deliverables for projecting reporting, including geospatial GIS</li>
-                    <li style="font-size:12px">Database and API frameworks using Django / Flask, PostgreSQL / SQLite3</li>
+                    <li style="font-size:12px">Database and API web applications using Django, React, FastAPI, PostgreSQL</li>
                     </ul>
                 </p>
             </div>
@@ -235,11 +235,12 @@
             <li>Git</li>
             <li>GitHub</li>
             <li>Django</li>
-            <li>Flask</li>
-            <li>REST APIs</li>
+            <li>React</li>
             <li>PostgreSQL</li>
-	        <li>Postman</li>
-            <li>Altair/Vega</li>
+            <li>Flask</li>
+            <li>FastAPI</li>
+            <li>REST APIs</li>
+            <li>Postman</li>
             <li>SQL</li>
             <li>SQLAlchemy</li>
             <li>VBA</li>
@@ -267,7 +268,7 @@
             <div class="row">
                 <div class="col-sm-5 copyright">
                     <p>
-                        &copy; <span id="current-year">2023</span> Anton LF
+                        &copy; <span id="current-year">2024</span> Anton LF
                     </p>
                 </div>
                 <div class="col-sm-2 top">
